# TadPole-OS

./: .dockerignore  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CODEBASE.md  CODEBASE_MAP.md  CODE_EVAL.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED.md  GLOSSARY.md  GOVERNANCE_ROLE_GUIDE.md  README.md  README.md.metadata.json  README.md.resolved.1  SWARM_ORCHESTRATION.md  debug-ws.ts  deploy.ps1  docker-compose.yml  eslint.config.js  fix_mock_agents.py  groq_update.json  index.html  kill_tadpole.bat  kill_tadpole.ps1  kill_tadpole_cmd.bat  mission_dual_node.ps1  package-lock.json  package.json  playwright.config.ts  start_tadpole.bat  tailwind.config.js  task.md  trigger_agent.ps1  tsconfig.app.json  tsconfig.json  vite.config.ts
server-rs/: .env.example  Cargo.toml  compile_errors.txt  migrate_capabilities.py  test3.rs  test_regex.rs  test_results.txt
server-rs/data/context/: IDENTITY.md
server-rs/data/memory/: LONG_TERM_MEMORY.md
server-rs/data/skills/: analyze_budget.json  analyze_feedback.json  api_test.json  archive_to_vault.json  check_server_health.json  code_audit.json  code_review.json  cold_call.json  conflict_resolution.json  contract_review.json  copywriting.json  customer_chat.json  data_analysis.json  database_query.json  debug.json  deep_research.json  delete_file.json  edit_content.json  employee_onboarding.json  expense_tracking.json  fetch_url.json  figma_sync.json  generate_image.json  git_push.json  issue_alpha_directive.json  keyword_research.json  knowledge_base_search.json  (+22 more)
server-rs/src/: db.rs  main.rs  state.rs
(+259 files in other folders)
