[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment Variables
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for Gemini API)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Process / System
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
# Database Persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
once_cell = "1.21.3"
regex = "1.10"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = false         # Disable LTO to save memory during build on low-spec bunker
codegen-units = 1   # Keep 1 to ensure deterministic binary link
panic = 'abort'     # Reduce binary size
strip = true        # Strip symbols automatically
